gl31-master/src/test/deca/context/valid/complet/return_meth3.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 20/01/2021
class Test{

    void methTest(float param1){
        println(param1);
    }
}
