gl31-master/src/test/deca/context/invalid/complet/same_name2.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 14: Erreur, une méthode porte déjà ce nom
//
// Historique:
//    cree le 20/01/2021
class Test{

    void methTest(){
        print("methode1");
    }
    int methTest(){
        print("methode2");
    }
}
